# ZOVML

ZOVML/: ZOVML.opam  dune-project
ZOVML/lib/: ast.ml  dune  machine.ml  parser.ml
ZOVML/lib/ast/: ast.ml  dune
ZOVML/lib/middlend/: anf.ml  anf_ast.ml  dune  print_anf.ml
ZOVML/lib/parser/: common.ml  dune  expr.ml  parser.ml
ZOVML/lib/riscv/: codegen.ml  dune  machine.ml
ZOVML/lib/utils/: dune  utils.ml
ZOVML/test/: anf.ml  dune
ZOVML/test/parser/: core.ml  dune  expr.ml
