(lang dune 3.20)

(name ZOVML)

(generate_opam_files true)

(source
 (github sevenbunu/ZOVML))

(authors "Alexei Dmtirievtsev" "Konstantin Oreshin")

(maintainers "Alexei Dmtirievtsev" "Konstantin Oreshin")

(license LGPL-2.1)

(package
 (name ZOVML)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  ocaml
  dune
  ppx_deriving
  (ocamlformat :build))
 (tags
  ("add topics" "to describe" your project)))
